objects/sixsense__X6sense_Account_Score_Chatter__c.object
<CustomObject>
    <fields>
        <fullName>sixsense__Chatter_Post__c</fullName>
        <description>This text field is where the CustomLabel.Name will be stored for the chatter post. Presently, we will be leveraging a static message, via a custom label; however, this could change in the future to permitting custom messaging.</description>
        <label>Chatter Post</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sixsense__NewState__c</fullName>
        <description>New Status during the Chatter Notification</description>
        <inlineHelpText>New Status during the Chatter Notification</inlineHelpText>
        <label>New State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__OldState__c</fullName>
        <description>Old State during the chatter notification</description>
        <inlineHelpText>Old State during the chatter notification</inlineHelpText>
        <label>Old State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__X6sense_Account_Score__c</fullName>
        <label>6sense Account Score</label>
        <referenceTo>sixsense__X6sense_Account_Score__c</referenceTo>
        <relationshipLabel>6sense Account Score Chatters</relationshipLabel>
        <relationshipName>X6sense_Account_Score_Chatters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>6sense Account Score Chatter</label>
    <nameField>
        <label>6sense Account Score Chatter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>6sense Account Score Chatters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>